banner secton iss done

--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,162 @@
   font-weight: 400;
   font-style: normal;
 }
+
+/* shared styles*/
+
+.display-flex{
+
+    display: flex;
+}
+
+.text-primary{
+
+    color: #ff900e;
+}
+
+.text-gray{
+    color: #424242;
+}
+
+.text-light-gray{
+
+    color: #727272;
+}
+
+.bglight{
+
+    background-color: rgb(255, 144, 14, 0.1);
+}
+
+main{
+
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+main>section{
+
+    margin-top: 130px;
+}
+/* header styles*/
+/* nav-bar related  styles*/
+
+.nav-bar{
+    
+    justify-content: space-between;
+    align-items: center;
+}
+
+.brand{
+
+    font-style: bold;
+    font-size: 3rem;
+}
+
+.nav-item{
+
+    text-decoration: none;
+    list-style: none;
+    margin-right: 30px;
+}
+
+.nav-bar, .banner{
+
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+
+/* banner related style*/
+
+.banner-content{
+
+    max-width: 850px;
+    margin: 0  auto;
+    text-align: center;
+    margin-bottom: 50px;
+    justify-content: center;
+}
+
+.banner-title{
+
+    font-style: 700;
+    font-size: 4rem;
+}
+
+
+.btn-primary{
+
+    background-color: #ff900e;
+    color: #ffff;
+    padding: 20px 25px;
+    font-size: 1.25rem;
+    font-weight: 600;
+    border-radius: 8px;
+    border: none;
+}
+.banner-img{
+
+    width: 100%;
+}
+
+
+
+/* teams and feature related styles*/
+.teams{
+
+    align-items: center;
+}
+
+.tema-img-container{
+
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 24px;
+}
+
+.our-features{
+
+    margin-left: 130px;
+    max-width: 530px;
+}
+
+.feature-title{
+
+    font-size: 2.8rem;
+}
+
+#Quick-list{
+
+    font-weight: 500;
+
+}
+
+@media screen and (max-width:576px) {
+
+    .nav-bar, .nav-links, .teams{
+
+        flex-direction:column ;
+    }
+    .tema-img-container{
+
+        grid-template-columns: repeat(1,1fr);
+    }
+
+    .our-features{
+
+        margin-left: 20px;
+    }
+    
+}
+
+/*medium device*/
+
+@media screen and (min-width:576px) and (max-width:992px) {
+
+    .teams{
+
+        flex-direction: column;
+    }
+    
+}
