added upto  sponsor

--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,11 @@ main>section{
 
     margin-top: 130px;
 }
+
+.section-title{
+
+    font-size: 2.8rem;
+}
 /* header styles*/
 /* nav-bar related  styles*/
 
@@ -128,10 +133,7 @@ main>section{
     max-width: 530px;
 }
 
-.feature-title{
 
-    font-size: 2.8rem;
-}
 
 #Quick-list{
 
@@ -139,13 +141,69 @@ main>section{
 
 }
 
+/* some fact related style */
+
+.facts-container{
+
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+}
+.fact-card{
+
+    border: 1px solid #ff900e;
+    width: 240px;
+    height: 240px;
+    border-radius: 8px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.fact-number{
+
+    font-size: 2.5rem;
+    font-weight: 600;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+
+.fact-name{
+
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 10px;
+}
+
+.fact-discription{
+
+    max-width: 540px;
+}
+
+/* sponsor releated style */
+.spnsor-info{
+
+    max-width: 540px;
+    margin: 50px auto;
+    text-align: center;
+}
+
+.sponsor-companies{
+
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+}
+
+.sponsor-companies img{
+
+    filter: grayscale(100%);
+}
 @media screen and (max-width:576px) {
 
     .nav-bar, .nav-links, .teams{
 
         flex-direction:column ;
     }
-    .tema-img-container{
+    .tema-img-container, .facts-container, .sponsor-companies {
 
         grid-template-columns: repeat(1,1fr);
     }
@@ -154,6 +212,19 @@ main>section{
 
         margin-left: 20px;
     }
+
+    .facts-container{
+        justify-items: center;
+        gap: 24px;
+    }
+
+    .sponsor-companies{
+
+        justify-items: center;
+        gap: 50px;
+    }
+
+
     
 }
 
@@ -164,6 +235,17 @@ main>section{
     .teams{
 
         flex-direction: column;
+    }
+
+    .our-features{
+        margin: 50px auto;
+    }
+
+    .sponsor-companies, .facts-container{
+
+        grid-template-columns: repeat(2,1fr);
+        gap: 50px;
+        justify-items: center;
     }
     
 }
